2001-10-31  Michael Meeks  <michael@ximian.com>

	* bonobo/bonobo-plug.c (bonobo_plug_destroy_event): hack the
	mjmess out - this is never called it seems.
	
	* bonobo/bonobo-socket.c
	(bonobo_socket_focus_in),
	(bonobo_socket_focus_out): fix broken focus chaining.

	* bonobo/bonobo-widget.c
	(bonobo_widget_finalize): re-impl.
	(bonobo_widget_dispose): impl.
	(bonobo_widget_class_init): hook.

	* bonobo/bonobo-ui-toolbar-control-item.c
	(impl_finalize, impl_dispose): re-impl.
	(class_init): hook.
	(bonobo_ui_toolbar_control_item_new): upd.

	* tests/test-ui.c (main): give a relative path for std-ui.xml

2001-10-31  Michael Meeks  <michael@ximian.com>

	* bonobo/bonobo-ui-toolbar-control-item.c
	(set_control_property_bag_value): don't set things on a NULL bag.

	* bonobo/bonobo-ui-util.c
	(bonobo_ui_util_get_ui_fname): fix silly.

	* bonobo/bonobo-control.c
	(bonobo_control_set_transient_for): re-impl, fix leak.

2001-10-30  Michael Meeks  <michael@ximian.com>

	* bonobo/bonobo-control-frame.c
	(bonobo_control_frame_bind_to_control): shortcut re-sets,
	only take a CORBA ref.
	(bonobo_control_frame_dispose): only release a CORBA ref.

	* bonobo/bonobo-control.c
	(bonobo_control_notify_plug_died): impl.

	* bonobo/bonobo-plug.c
	(bonobo_plug_destroy_event): impl.
	(bonobo_plug_dispose): notify control that plug died.

	* bonobo/bonobo-control.c
	(bonobo_control_plug_destroy_cb): kill.
	(bonobo_control_plug_destroy_event_cb): kill.
	(impl_Bonobo_Control_setWindowId): don't connect them.

	* bonobo/bonobo-control-frame.c
	(bonobo_control_frame_sync_unrealize): kill.
	(bonobo_control_frame_sync_realize): simplify.
	s/priv->container/priv->socket/ remove the hbox
	hack.
	(bonobo_control_frame_construct): kill hbox code, add ev.
	(bonobo_control_frame_socket_state_changed): kill, move
	into the socket -> loose a signal & unsafety.
	(bonobo_control_frame_autoactivate_focus_in): kill.
	(bonobo_control_frame_autoactivate_focus_out): kill.